@@ -11,10 +11,10 @@ class ApplicationController < ActionController::Base
   def tabs
     session[:current_tab] = :home unless session[:current_tab]
     [ # array of hashes
-      { :active => (session[:current_tab] == :home),  :text => "Home",  :url => home_path },
-      { :active => (session[:current_tab] == :tab2),  :text => "Tab 2", :url => "/" },
-      { :active => (session[:current_tab] == :tab3),  :text => "Tab 3", :url => "/" },
-      { :active => (session[:current_tab] == :tab4),  :text => "Tab 4", :url => "/" }
+      { :active => (session[:current_tab] == :home),     :text => "Home",     :url => home_path },
+      { :active => (session[:current_tab] == :accounts), :text => "Accounts", :url => accounts_path },
+      { :active => (session[:current_tab] == :tab3),     :text => "Tab 3",    :url => "/" },
+      { :active => (session[:current_tab] == :tab4),     :text => "Tab 4",    :url => "/" }
     ]
   end
 
