@@ -1,5 +1,5 @@
 class HomeController < ApplicationController
-  before_filter :require_user, :only => [ :index ]
+  before_filter :require_user
   before_filter { |filter| filter.send(:set_current_tab, :home) }
   
   #----------------------------------------------------------------------------
