@@ -1,0 +1,2 @@
+class Account < ActiveRecord::Base
+end
