@@ -1,10 +1,13 @@
 ActionController::Routing::Routes.draw do |map|
+  map.resources :accounts
+
   # The priority is based upon order of creation: first created -> highest priority.
   map.home "",  :controller => "home", :action => "index"
   map.resource  :profile, :controller => "users"
   map.resource  :user
   map.resource  :authentication
   map.resources :passwords
+  map.resources :accounts
 
   map.signup "signup", :controller => "users",           :action => "new"
   map.login  "login",  :controller => "authentications", :action => "new"
