@@ -251,7 +251,7 @@ tt {
 
 .mainform {
   background: white;
-  margin: 15px 250px 10px 15px;
+  margin: 15px 15px 15px 15px;
   /*padding: 0px 0px 10px 0px;*/
   /*border:1px red dotted;*/
 }
